testsuite/tests/parser/should_fail/pfail030.alan
hello() : proc
  foo : int;
{
  = 3;
}
