testsuite/tests/parser/should_fail/pfail030.stderr
pfail030.alan:4:3: Error: Parse error on input `='
	Not a valid statement

